tests/baselines/reference/recursiveBaseConstructorCreation3.errors.txt
==== tests/cases/compiler/recursiveBaseConstructorCreation3.ts (2 errors) ====
    declare class base<T> {
    }
    declare class abc<T> extends base<T> {
        foo: xyz;
    }
    declare class xyz extends abc {
                              ~~~
!!! error TS2314: Generic type 'abc<T>' requires 1 type argument(s).
    }
    
    var bar = new xyz(); // Error: Invalid 'new' expression.
    var r: xyz = bar.foo;
                     ~~~
!!! error TS2339: Property 'foo' does not exist on type 'xyz'.